--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,13 +10,14 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
         go-version: 1.20
+
+    steps:
+    - name: Check out code into the Go module directory
+    - uses: actions/checkout@v3
 
     - name: Test
       run: make test
