--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,14 +12,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    
+
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
         go-version: 1.20
 
     - name: Check out code into the Go module directory
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
 
     - name: Test
       run: make test
