--- a/web/admin/package.json
+++ b/web/admin/package.json
@@ -9,13 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "antd": "^4.24.8",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "echarts": "^5.4.1",
+    "i18next": "^22.4.13",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
     "react-router-dom": "^6.8.2",
     "simplebar": "^6.2.1"
   },
