--- a/web/admin/package.json
+++ b/web/admin/package.json
@@ -15,6 +15,8 @@
     "dayjs": "^1.11.7",
     "echarts": "^5.4.1",
     "i18next": "^22.4.13",
+    "mobx": "^6.9.0",
+    "mobx-react-lite": "^3.4.3",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
