--- a/web/admin/package.json
+++ b/web/admin/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@react-spring/web": "^9.7.2",
     "antd": "^4.24.8",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
