--- a/web/admin/package.json
+++ b/web/admin/package.json
@@ -20,6 +20,7 @@
     "mobx-react-lite": "^3.4.3",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
     "react-router-dom": "^6.8.2",
