--- a/web/admin/package.json
+++ b/web/admin/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "echarts": "^5.4.1",
+    "history": "^5.3.0",
     "i18next": "^22.4.13",
     "mobx": "^6.9.0",
     "mobx-react-lite": "^3.4.3",
