--- a/cmd/config.env
+++ b/cmd/config.env
@@ -1,3 +1,6 @@
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:secret@localhost:5432/glassy_sky?sslmode=disable
 SERVER_ADDRESS=0.0.0.0:9999
+
+JWT_SECRET=secret
+TOKEN_EXPIRATION_MINUTES=60
