add app options

--- a/cmd/config_test.env
+++ b/cmd/config_test.env
@@ -3,4 +3,6 @@ DB_SOURCE=postgresql://root:secret@localhost:5432/glassy_sky?sslmode=disable
 SERVER_ADDRESS=0.0.0.0:9999
 
 JWT_SECRET=secret
+JWT_SECRET="secret"
 TOKEN_EXPIRATION_MINUTES=60
+TIME_ZONE="Asia/Shanghai"
